//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Project "SEED 2.0" {
  database_type: 'PostgreSQL'
  Note: 'SEED 2.0'
}

Table users {
  id String [pk]
  name String
  email String
  offerType String
  amount Int
  isPaid Boolean [default: false]
  address String
  height String
  weight String
  contactNumber String
  transactionCode String
  isValid Boolean [default: true]
}

Table new_users {
  id String [pk]
  name String [not null]
  email String [not null]
  phone String [not null]
  address String [not null]
  order Order [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table products {
  id String [pk]
  productName String [not null]
  stock stocks [not null]
  order Order [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table stocks {
  id String [pk]
  productId String [not null]
  product products [not null]
  quantity Int [not null]
  colorId Int [not null]
  sizeId Int [not null]
  color colors [not null]
  size sizes [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table colors {
  id Int [pk, increment]
  color String [unique, not null]
  stock stocks [not null]
}

Table sizes {
  id Int [pk, increment]
  size String [unique, not null]
  stock stocks [not null]
}

Table Order {
  id String [pk]
  quantity Int [not null]
  price Int [not null]
  total Int [not null]
  color String [not null]
  size String [not null]
  isPaid Boolean [not null, default: false]
  isDelivered Boolean [not null, default: false]
  deliveryType String [not null]
  transactionCode String
  discount Int [not null]
  discountCupon String [not null]
  userId String [not null]
  productId String [not null]
  product products [not null]
  user new_users [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Ref: stocks.productId > products.id

Ref: stocks.colorId > colors.id

Ref: stocks.sizeId > sizes.id

Ref: Order.productId > products.id

Ref: Order.userId > new_users.id